Added images to the file

--- a/animals.html
+++ b/animals.html
@@ -43,6 +43,18 @@
             rows with Animals letters breaks at 575 x 620 px</div>
     </div>
 
+    <div class="container">
+        <img src="./images/kangaroo.webp" class="img-fluid" alt="Pic of Kangaroo">
+        <img src="./images/alligator1.jpg" class="img-fluid" alt="Pic of Alligator">
+        <img src="./images/turtle1.jpg" class="img-fluid" alt="Pic of Turtle">
+    </div>
+    <div class="container">
+        <img src="./images/kangaroo.webp" class="img-thumbnail" alt="Kangaroo">
+        <img src="./images/alligator1.jpg" class="img-thumbnail" alt="Alligator">
+        <img src="./images/turtle1.jpg" class="img-thumbnail" alt="Turtle">
+    </div>
+    
+
 </body>
 
 </html>
