--- a/bootstart.html
+++ b/bootstart.html
@@ -1,21 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Bootstrap Starter</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" 
-    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" 
-    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
 
 </head>
+
 <body>
 
+  <table class=" table table-hover table-dark table-bordered table-sm table-striped caption-top">
+    <caption>Animals Table</caption>
+    <thead>
+      <tr>
+        <th scope="col">Letter</th>
+        <th scope="col">Animal</th>
+        <th scope="col">City</th>
+        <th scope="col">Car</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>K</td>
+        <td>Kangaroo</td>
+        <td>Kansas City</td>
+        <td>Kia</td>
+      </tr>
+      <tr>
+        <td>A</td>
+        <td>Alligator</td>
+        <td>Atlanta</td>
+        <td>Acura</td>
+      </tr>
+      <tr>
+        <td>T</td>
+        <td>Turtle</td>
+        <td>Texas</td>
+        <td>Tesla</td>
+      </tr>
+      <tr>
+        <td>R</td>
+        <td>Rabbit</td>
+        <td>Rhode</td>
+        <td>Range Rover</td>
+      </tr>
+      <tr>
+        <td>E</td>
+        <td>Elephant</td>
+        <td>Egypt</td>
+        <td>Elfin</td>
+      </tr>
+      <tr>
+        <td>D</td>
+        <td>Dog</td>
+        <td>Delaware</td>
+        <td>Dodge</td>
+      </tr>
 
+    </tbody>
+  </table>
 
 </body>
+
 </html>
