--- a/animals.html
+++ b/animals.html
@@ -53,7 +53,76 @@
         <img src="./images/alligator1.jpg" class="img-thumbnail" alt="Alligator">
         <img src="./images/turtle1.jpg" class="img-thumbnail" alt="Turtle">
     </div>
-    
+
+    <table class=" table table-hover table-dark table-bordered table-sm table-striped caption-top">
+        <caption>Animals Table</caption>
+        <thead>
+            <tr>
+                <th scope="col">Letter</th>
+                <th scope="col">Animal</th>
+                <th scope="col">City</th>
+                <th scope="col">Car</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>K</td>
+                <td>Kangaroo</td>
+                <td>Kansas City</td>
+                <td>Kia</td>
+            </tr>
+            <tr>
+                <td>A</td>
+                <td>Alligator</td>
+                <td>Atlanta</td>
+                <td>Acura</td>
+            </tr>
+            <tr>
+                <td>T</td>
+                <td>Turtle</td>
+                <td>Texas</td>
+                <td>Tesla</td>
+            </tr>
+            <tr>
+                <td>R</td>
+                <td>Rabbit</td>
+                <td>Rhode</td>
+                <td>Range Rover</td>
+            </tr>
+            <tr>
+                <td>E</td>
+                <td>Elephant</td>
+                <td>Egypt</td>
+                <td>Elfin</td>
+            </tr>
+            <tr>
+                <td>D</td>
+                <td>Dog</td>
+                <td>Delaware</td>
+                <td>Dodge</td>
+            </tr>
+
+        </tbody>
+    </table>
+
+
+    <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+        <div class="btn-group me-2" role="group" aria-label="SUCCESS">
+            <button type="button" class="btn btn-success">K</button>
+            <button type="button" class="btn btn-success">A</button>
+
+        </div>
+        <div class="btn-group me-2" role="group" aria-label="WARNING">
+            <button type="button" class="btn btn-warning">T</button>
+            <button type="button" class="btn btn-warning">R</button>
+        </div>
+        <div class="btn-group me-2" role="group" aria-label="DANGER">
+            <button type="button" class="btn btn-danger">E</button>
+            <button type="button" class="btn btn-danger">D</button>
+        </div>
+    </div>
+
+
 
 </body>
 
