--- a/animals.html
+++ b/animals.html
@@ -44,83 +44,116 @@
     </div>
 
     <div class="container">
-        <img src="./images/kangaroo.webp" class="img-fluid" alt="Pic of Kangaroo">
-        <img src="./images/alligator1.jpg" class="img-fluid" alt="Pic of Alligator">
-        <img src="./images/turtle1.jpg" class="img-fluid" alt="Pic of Turtle">
+        <img src="./images/kangaroo.jpg" class="img-fluid" alt="Pic of Kangaroo" height="500" width="400">
+        <img src="./images/alligator1.jpg" class="img-fluid" alt="Pic of Alligator" height="500" width="400">
+        <img src="./images/turtle1.jpg" class="img-fluid" alt="Pic of Turtle" height="500" width="400">
     </div>
     <div class="container">
-        <img src="./images/kangaroo.webp" class="img-thumbnail" alt="Kangaroo">
-        <img src="./images/alligator1.jpg" class="img-thumbnail" alt="Alligator">
-        <img src="./images/turtle1.jpg" class="img-thumbnail" alt="Turtle">
+        <img src="./images/kangaroo.jpg" class="img-thumbnail" alt="Kangaroo" height="250" width="250">
+        <img src="./images/alligator1.jpg" class="img-thumbnail" alt="Alligator" height="250" width="250">
+        <img src="./images/turtle1.jpg" class="img-thumbnail" alt="Turtle" height="250" width="250">
     </div>
 
-    <table class=" table table-hover table-dark table-bordered table-sm table-striped caption-top">
-        <caption>Animals Table</caption>
-        <thead>
-            <tr>
-                <th scope="col">Letter</th>
-                <th scope="col">Animal</th>
-                <th scope="col">City</th>
-                <th scope="col">Car</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>K</td>
-                <td>Kangaroo</td>
-                <td>Kansas City</td>
-                <td>Kia</td>
-            </tr>
-            <tr>
-                <td>A</td>
-                <td>Alligator</td>
-                <td>Atlanta</td>
-                <td>Acura</td>
-            </tr>
-            <tr>
-                <td>T</td>
-                <td>Turtle</td>
-                <td>Texas</td>
-                <td>Tesla</td>
-            </tr>
-            <tr>
-                <td>R</td>
-                <td>Rabbit</td>
-                <td>Rhode</td>
-                <td>Range Rover</td>
-            </tr>
-            <tr>
-                <td>E</td>
-                <td>Elephant</td>
-                <td>Egypt</td>
-                <td>Elfin</td>
-            </tr>
-            <tr>
-                <td>D</td>
-                <td>Dog</td>
-                <td>Delaware</td>
-                <td>Dodge</td>
-            </tr>
-
-        </tbody>
-    </table>
-
+    <div class="table-responsive">
+        <table class=" table table-hover table-dark table-bordered table-sm table-striped caption-top">
+            <caption>List of Animals Table</caption>
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Letter</th>
+                    <th scope="col">Animal</th>
+                    <th scope="col">City</th>
+                    <th scope="col">Car</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="table-primary">
+                    <th scope="row">K</th>
+                    <td>Kangaroo</td>
+                    <td>Kansas City</td>
+                    <td>Kia</td>
+                </tr>
+                <tr class="table-success">
+                    <th scope="row">A</th>
+                    <td>Alligator</td>
+                    <td>Atlanta</td>
+                    <td>Acura</td>
+                </tr>
+                <tr class="table-warning">
+                    <th scope="row">T</td>
+                    <td>Turtle</td>
+                    <td>Texas</td>
+                    <td>Tesla</td>
+                </tr>
+                <tr class="table-danger">
+                    <th scope="row">R</th>
+                    <td>Rabbit</td>
+                    <td>Rhode</td>
+                    <td>Range Rover</td>
+                </tr>
+                <tr class="table-info">
+                    <th scope="row">E</th>
+                    <td>Elephant</td>
+                    <td>Egypt</td>
+                    <td>Elfin</td>
+                </tr>
+                <tr class="table-secondary">
+                    <th scope="row">D</th>
+                    <td>Dog</td>
+                    <td>Delaware</td>
+                    <td>Dodge</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 
     <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-        <div class="btn-group me-2" role="group" aria-label="SUCCESS">
-            <button type="button" class="btn btn-success">K</button>
-            <button type="button" class="btn btn-success">A</button>
+        <div class="btn-group" role="group" aria-label="First Group">
+            <button type="button" class="btn btn-secondary btn-success">K</button>
+            <button type="button" class="btn btn-secondary btn-success">A</button>
 
         </div>
-        <div class="btn-group me-2" role="group" aria-label="WARNING">
-            <button type="button" class="btn btn-warning">T</button>
-            <button type="button" class="btn btn-warning">R</button>
+        <div class="btn-group" role="group" aria-label="Second Group">
+            <button type="button" class="btn btn-secondary btn-warning">T</button>
+            <button type="button" class="btn btn-secondary btn-warning">R</button>
         </div>
-        <div class="btn-group me-2" role="group" aria-label="DANGER">
-            <button type="button" class="btn btn-danger">E</button>
-            <button type="button" class="btn btn-danger">D</button>
+        <div class="btn-group" role="group" aria-label="Third Group">
+            <button type="button" class="btn btn-secondary btn-danger">E</button>
+            <button type="button" class="btn btn-secondary btn-danger">D</button>
         </div>
     </div>
+
+    <pre>    
+    </pre>
+
+    <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="Drop" data-bs-toggle="dropdown" aria-expanded="false">
+          Dropdown
+        </button>
+        <div class="dropdown-menu" aria-labelledby="Drop">
+            <li><a class="dropdown-item" href="./plane.html">Plane Page</a></li>
+            <li><a class="dropdown-item" href="./train.html">Train Page</a></li>
+        </div>
+    </div>
+    
+    <pre> 
+    </pre>
+
+    <form>
+        <div class="form-group">
+            <label for="exampleInputEmail">Email address</label>
+            <input type="email" class="form-control" id="emailExample" aria-describedby="emailHelp" placeholder="Enter email">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group">
+            <label for="animalName">Animal</label>
+            <input type="text" class="form-control" id="animalName" aria-describedby="emailHelp" placeholder="Enter your Animal">
+        </div>
+        <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">Sign up for news Letter?</label>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 
 
 
