--- a/animals.html
+++ b/animals.html
@@ -18,9 +18,28 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <a class="navbar-brand" href="animals.html">Interesting Animals</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div id="navbarSupportedContent" class="collapse navbar-collapse">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="plane.html">Plane</a>
+                </li>
+                <li>
+                    <a class="nav-link" href="train.html">Train</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <h1>
         Animals by Venkata Krishna Reddy Katreddy
     </h1>
+
     <div class="container">
         <div class="row">
             <div class="col-sm-2">K</div>
@@ -122,31 +141,34 @@
         </div>
     </div>
 
-    <pre>    
+    <pre>
     </pre>
 
     <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="Drop" data-bs-toggle="dropdown" aria-expanded="false">
-          Dropdown
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="Drop" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            Dropdown
         </button>
         <div class="dropdown-menu" aria-labelledby="Drop">
             <li><a class="dropdown-item" href="./plane.html">Plane Page</a></li>
             <li><a class="dropdown-item" href="./train.html">Train Page</a></li>
         </div>
     </div>
-    
-    <pre> 
+
+    <pre>
     </pre>
 
     <form>
         <div class="form-group">
             <label for="exampleInputEmail">Email address</label>
-            <input type="email" class="form-control" id="emailExample" aria-describedby="emailHelp" placeholder="Enter email">
+            <input type="email" class="form-control" id="emailExample" aria-describedby="emailHelp"
+                placeholder="Enter email">
             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
         <div class="form-group">
             <label for="animalName">Animal</label>
-            <input type="text" class="form-control" id="animalName" aria-describedby="emailHelp" placeholder="Enter your Animal">
+            <input type="text" class="form-control" id="animalName" aria-describedby="emailHelp"
+                placeholder="Enter your Animal">
         </div>
         <div class="form-check">
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
@@ -155,6 +177,10 @@
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 
+    <pre>
+    </pre>
+
+    
 
 
 </body>
