Added card components and link to readme file

--- a/animals.html
+++ b/animals.html
@@ -180,8 +180,49 @@
     <pre>
     </pre>
 
-    
-
+    <div class="row">
+        <div class="col-sm-4">
+            <div class="card" style="width: 18rem;">
+                <img src="./Images/kangaroo.jpg" class="card-img-top" alt="Kangaroo">
+                <div class="card-body">
+                    <h5 class="card-title">Kangaroo</h5>
+                    <p class="card-text">The kangaroo is a marsupial from the family Macropodidae. 
+                        In common use the term is used to describe the largest species from this family, 
+                        the red kangaroo, as well as the antilopine kangaroo, eastern grey kangaroo, and 
+                        western grey kangaroo. Kangaroos are indigenous to Australia and New Guinea.
+                    </p>
+                    <a href="https://en.wikipedia.org/wiki/Kangaroo" class="btn btn-primary">Kangaroo</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="card" style="width: 18rem;">
+                <img src="./Images/alligator1.jpg" class="card-img-top" alt="Alligator">
+                <div class="card-body">
+                    <h5 class="card-title">Alligator</h5>
+                    <p class="card-text">An alligator is a crocodilian in the genus Alligator of the family Alligatoridae. 
+                        The two extant species are the American alligator and the Chinese alligator. Additionally, 
+                        several extinct species of alligator are known from fossil remains.
+                    </p>
+                    <a href="https://en.wikipedia.org/wiki/Alligator" class="btn btn-primary">Alligator</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="card" style="width: 18rem;">
+                <img src="./Images/turtle1.jpg" class="card-img-top" alt="Turtle">
+                <div class="card-body">
+                    <h5 class="card-title">Turtle</h5>
+                    <p class="card-text">Turtles are an order of reptiles known as Testudines; characterized by a shell 
+                        developed from their skeleton. Turtles were historically considered part of a group of reptiles 
+                        known as Anapsida but more recent studies place them with other modern reptiles in Diapsida, 
+                        usually closer to Archosauria than Lepidosauria.
+                    </p>
+                    <a href="https://en.wikipedia.org/wiki/Turtle" class="btn btn-primary">Turtle</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 
