--- a/animals.html
+++ b/animals.html
@@ -183,7 +183,7 @@
     <div class="row">
         <div class="col-sm-4">
             <div class="card" style="width: 18rem;">
-                <img src="./Images/kangaroo.jpg" class="card-img-top" alt="Kangaroo">
+                <img src="./images/kangaroo.jpg" class="card-img-top" alt="Kangaroo">
                 <div class="card-body">
                     <h5 class="card-title">Kangaroo</h5>
                     <p class="card-text">The kangaroo is a marsupial from the family Macropodidae. 
@@ -197,7 +197,7 @@
         </div>
         <div class="col-sm-4">
             <div class="card" style="width: 18rem;">
-                <img src="./Images/alligator1.jpg" class="card-img-top" alt="Alligator">
+                <img src="./images/alligator1.jpg" class="card-img-top" alt="Alligator">
                 <div class="card-body">
                     <h5 class="card-title">Alligator</h5>
                     <p class="card-text">An alligator is a crocodilian in the genus Alligator of the family Alligatoridae. 
@@ -210,7 +210,7 @@
         </div>
         <div class="col-sm-4">
             <div class="card" style="width: 18rem;">
-                <img src="./Images/turtle1.jpg" class="card-img-top" alt="Turtle">
+                <img src="./images/turtle1.jpg" class="card-img-top" alt="Turtle">
                 <div class="card-body">
                     <h5 class="card-title">Turtle</h5>
                     <p class="card-text">Turtles are an order of reptiles known as Testudines; characterized by a shell 
@@ -223,8 +223,6 @@
             </div>
         </div>
     </div>
-
-    <a href="./animals.html">Animals</a>
 
 </body>
 
