--- a/animals.html
+++ b/animals.html
@@ -129,14 +129,15 @@
         <div class="btn-group" role="group" aria-label="First Group">
             <button type="button" class="btn btn-secondary btn-success">K</button>
             <button type="button" class="btn btn-secondary btn-success">A</button>
+            <button type="button" class="btn btn-secondary btn-success">T</button>
 
         </div>
         <div class="btn-group" role="group" aria-label="Second Group">
-            <button type="button" class="btn btn-secondary btn-warning">T</button>
             <button type="button" class="btn btn-secondary btn-warning">R</button>
+            <button type="button" class="btn btn-secondary btn-warning">E</button>
         </div>
         <div class="btn-group" role="group" aria-label="Third Group">
-            <button type="button" class="btn btn-secondary btn-danger">E</button>
+            
             <button type="button" class="btn btn-secondary btn-danger">D</button>
         </div>
     </div>
