--- a/animals.html
+++ b/animals.html
@@ -125,6 +125,15 @@
         </table>
     </div>
 
+    <div>
+        <button class="btn">K</button>
+        <button class="btn">A</button>
+        <button class="btn">T</button>
+        <button class="btn">R</button>
+        <button class="btn">E</button>
+        <button class="btn">D</button>
+    </div>
+
     <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
         <div class="btn-group" role="group" aria-label="First Group">
             <button type="button" class="btn btn-secondary btn-success">K</button>
